# grpc_demo

./: README.md
proto/: grpc_demo.proto
python/: generate_data_struct_from_proto.sh  grpc_demo_client.py  grpc_demo_pb2.py  grpc_demo_pb2.pyi  grpc_demo_pb2_grpc.py  grpc_demo_server.py
rust-client/: Cargo.toml  build.rs
rust-client/src/: client.rs  server.rs
