[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"


[[bin]] # Bin to run the grpc_demo gRPC server
name = "grpc_demo-server"
path = "src/server.rs"

[[bin]] # Bin to run the grpc_demo gRPC client
name = "grpc_demo-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "*"